--- a/helm/workers/templates/replicaset.yaml
+++ b/helm/workers/templates/replicaset.yaml
@@ -1,7 +1,7 @@
 {{- range $key, $val := .Values.workers }}
 ---
 apiVersion: apps/v1beta2
-kind: ReplicaSet
+kind: Deployment
 metadata:
   labels:
     applicationName: {{ $key }}
