--- a/helm/workers/templates/replicaset.yaml
+++ b/helm/workers/templates/replicaset.yaml
@@ -40,8 +40,8 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ $key }}
-  minReplicas: 1
-  maxReplicas: 10
+  minReplicas: 2
+  maxReplicas: $val.max
   metrics:
   - type: Resource
     resource:
